src/objects/KeyValue__c.object
<CustomObject>
    <description>Represents the Key Value pairs with record types.</description>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumericValue__c</fullName>
        <description>The numeric value of the key value used for value based rules and sorting</description>
        <inlineHelpText>The numeric value of the key value used for value based rules and sorting</inlineHelpText>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageNotes__c</fullName>
        <description>Optional notes on how this key value pair might be used</description>
        <inlineHelpText>Enter optional usage notes on how this key value pair might be used in this cloud instance/sandbox.</inlineHelpText>
        <label>Usage Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The external reference code for the title in the group.</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Key Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>UsageNotes__c</columns>
        <columns>ExternalID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DegreeKEys</fullName>
        <columns>NAME</columns>
        <columns>NumericValue__c</columns>
        <columns>Value__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>KeyValue__c.TransferDegree</value>
        </filters>
        <label>Degree Keys</label>
        <sharedTo>
            <group>Scholarship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinancialReqs</fullName>
        <columns>NAME</columns>
        <columns>NumericValue__c</columns>
        <columns>Value__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>KeyValue__c.FinRequirement</value>
        </filters>
        <label>Financial Reqs</label>
        <sharedTo>
            <group>Scholarship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QueueKeyValues</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UsageNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NumericValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>KeyValue__c.Queue</value>
        </filters>
        <label>Queue Key Values</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Key</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000001tC6aEAE_00N30000009R7ZiEAK</fullName>
        <active>true</active>
        <field>WGUCourseInProgram__c.TransferDegree__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transfer Degree</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>WGU Course In Program_Transfer Degree</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tC6aEAE_00N30000009R7ZjEAK</fullName>
        <active>true</active>
        <field>WGUCourseInProgram__c.TransferMinimumDegree__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transfer Degree</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>WGU Course In Program_Transfer Minimum D</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tC6cEAE_00N30000009PQ28EAG</fullName>
        <active>true</active>
        <field>WGUDegreeProgram__c.ProgramLevel__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ProgramLevel</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Degree Program_Program Level</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tsu4EAA_00N30000009R7ZJEA0</fullName>
        <active>true</active>
        <field>TransferAttendance__c.DegreeAwarded__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transfer Degree</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Transfer Attendance_Degree Awarded</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uzKMAQ_00NS000000137NgMAI</fullName>
        <active>true</active>
        <field>WGUDegreeProgram__c.Concentration__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Concentration</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Degree Program_Concentration</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uzKMAQ_00NS000000137NlMAI</fullName>
        <active>true</active>
        <field>WGUDegreeProgram__c.Degree__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Degree</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Degree Program_Degree</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uzKMAQ_00NS000000137NvMAI</fullName>
        <active>true</active>
        <field>WGUDegreeProgram__c.Department__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Department</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Degree Program_Department</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uzKMAQ_00NS000000137O5MAI</fullName>
        <active>true</active>
        <field>WGUDegreeProgram__c.Major__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Major</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Degree Program_Major</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uzPMAQ_00NS000000137OPMAY</fullName>
        <active>true</active>
        <field>WGUCourse__c.Division__c</field>
        <filterItems>
            <field>KeyValue__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CourseDivision</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WGU Course_Division</name>
    </namedFilters>
    <pluralLabel>Key Values</pluralLabel>
    <recordTypes>
        <fullName>Concentration</fullName>
        <active>true</active>
        <description>Focus on a particular area of a degree.</description>
        <label>Concentration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseDivision</fullName>
        <active>true</active>
        <description>The division to which the course applies.</description>
        <label>CourseDivision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Degree</fullName>
        <active>true</active>
        <description>The type of degree this record represents.</description>
        <label>Degree</label>
    </recordTypes>
    <recordTypes>
        <fullName>DegreeLevel</fullName>
        <active>true</active>
        <description>Degree Program level (Graduate vs Under Grad)</description>
        <label>DegreeLevel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Department</fullName>
        <active>true</active>
        <description>Department to which the degree applies.</description>
        <label>Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinRequirement</fullName>
        <active>true</active>
        <description>Financial Application Requirement</description>
        <label>FinRequirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major</fullName>
        <active>true</active>
        <description>Major to which a degree applies.</description>
        <label>Major</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgramLevel</fullName>
        <active>true</active>
        <label>ProgramLevel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Queue</fullName>
        <active>true</active>
        <description>Queue to Record Type assignment</description>
        <label>Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>TransferDegree</fullName>
        <active>true</active>
        <description>Degrees that may transfer to WGU.</description>
        <label>Transfer Degree</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>